# praxis

./: .env.example  .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
praxis-vscode/: CHANGELOG.md  README.md  package-lock.json  package.json  praxis-0.1.0.vsix
praxis-vscode/src/: extension.ts
src/: lib.rs  main.rs
src/agent/: conversation.rs  loop_state.rs  mod.rs  orchestrator.rs  sub_agent.rs
src/cli/: commands.rs  mod.rs  repl.rs
src/core/: config.rs  error.rs  mod.rs  types.rs
src/llm/: mod.rs  models.rs  ollama.rs  traits.rs
src/llm/provider/: antigravity.rs  gemini.rs  kolaborate.rs  mod.rs  openrouter.rs
src/tools/: context.rs  mod.rs  registry.rs
src/tools/browser/: executor.rs  mod.rs  snapshot.rs
src/tools/coding/: debug.rs  explain.rs  mod.rs  write.rs
tests/: browser_tasks.rs  model_benchmark.rs
