[package]
name = "praxis"
version = "0.2.1"
edition = "2021"
description = "An offline-first AI coding agent with browser automation"
authors = ["Calvin Magezi"]
license = "MIT"
repository = "https://github.com/Kolaborate-Platforms/praxis"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client for Ollama with streaming
reqwest = { version = "0.12", features = ["json", "stream"] }

# Streaming utilities
futures = "0.3"
tokio-stream = "0.1"

# JSON serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# TOML for config files
toml = "0.8"

# Error handling
thiserror = "2"
anyhow = "1"

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Environment config
dotenvy = "0.15"

# Async traits
async-trait = "0.1"

# Directory paths
dirs = "6"

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "praxis"
path = "src/main.rs"

[lib]
name = "praxis"
path = "src/lib.rs"

# Config for 'dist'
[workspace.metadata.dist]
# The preferred dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.30.3"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Whether to install an updater program
install-updater = true
# Path that installers should place binaries in
install-path = "CARGO_HOME"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
